updated star images

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                             <img class="ui small centered image food-image" src="graphics/fats.png" id="fats-icon">
                                         </div>
                                         <div class="column">
-                                            <p class="ui header" id="fatsCount">1</p>
+                                            <img style="height:4.5%; width: auto;" class="ui mini centered image" src="graphics/newOneStar.png">
                                         </div>
                                     </div>
                                 </div>
@@ -70,7 +70,8 @@
                                             <img class="ui small centered image food-image" src="graphics/dair.png" id="dair-icon">
                                         </div>
                                         <div class="column">
-                                            <p class="ui header" id="dairCount">4</p>
+                                            <img style="height:4.5%; width: auto;" class="ui mini centered image" src="graphics/newFourStar.png">
+                                            <!--p class="ui header" id="dairCount">4</p-->
                                         </div>
                                     </div>
 
@@ -86,7 +87,8 @@
                                             <img class="ui small centered image food-image" src="graphics/vegg.png" id="vegg-icon">
                                         </div>
                                         <div class="column">
-                                            <p class="ui header" id="veggCount">5</p>
+                                            <!--p class="ui header" id="veggCount">5</p-->
+                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newFiveStar.png">
                                         </div>
                                     </div>
 
@@ -105,7 +107,7 @@
                                             <img class="ui small centered image food-image" src="graphics/carb.png" id="carb-icon">
                                         </div>
                                         <div class="column">
-                                            <p class="ui header" id = "carbCount">3</p>
+                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newThreeStar.png">
                                         </div>
                                     </div>
 
@@ -120,7 +122,7 @@
                                             <img class="ui small centered image food-image" src="graphics/frui.png" id="frui-icon">
                                         </div>
                                         <div class="column">
-                                            <p class="ui header" id="fruiCount">5</p>
+                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newFiveStar.png">                                       
                                         </div>
 
                                     </div>
