added propagation of stars

--- a/login.html
+++ b/login.html
@@ -31,25 +31,25 @@
             </div>
             <div class="centered row" id="user-row">
                 <div class="ui two wide center aligned column">
-                    <button class="ui icon login button" id="dora">
+                    <button class="ui icon login button" id="Dora">
                         <i class="big asterisk icon"></i>
                         <br><br> Dora
                     </button>
                 </div>
                 <div class="two wide center aligned column">
-                    <button class="ui icon login button" id="joy">
+                    <button class="ui icon login button" id="Joy">
                         <i class="big smile icon"></i>
                         <br><br> Joy
                     </button>
                 </div>
                 <div class="two wide center aligned column">
-                    <button class="ui icon login button" id="rena">
+                    <button class="ui icon login button" id="Rena">
                         <i class="big star icon"></i>
                         <br><br> Rena
                     </button>
                 </div>
                 <div class="two wide center aligned column">
-                    <button class="ui icon login button" id="sanjana">
+                    <button class="ui icon login button" id="Sanjana">
                         <i class="big heart icon"></i>
                         <br><br> Sanjana
                     </button>
@@ -60,7 +60,8 @@
         <div class="small ui modal">
             <div class="header">
                 <center>
-                    <i class="big asterisk icon"></i><br>
+                    <span id="username"></span>
+                    <!-- <i class="big asterisk icon"></i> --><br>
                     Please enter your password!
                 </center>
             </div>
