more aesthetic login page + welcome msg

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.css" type="text/css" charset="utf-8">
         <link rel="stylesheet" href="pet_css.css">
 
+        <link rel="stylesheet" href="index.css">
+
 
         <!-- fonts -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -29,6 +31,7 @@
             <a class="item">Other</a>
         </div>
 
+        <center><div id='welcome-message'></div></center>
         <!--div class="ui tabular menu">
             <a class="active item">
              Food
