--- a/login.html
+++ b/login.html
@@ -11,11 +11,11 @@
         </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="login.js"></script>
-
         
         <!-- css -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.css" type="text/css" charset="utf-8">
         <link rel="stylesheet" href="login.css">
+
 
         <!-- fonts -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -27,7 +27,7 @@
                 <img class="ui image" src="graphics/dog.jpg" alt="dog"> 
             </div>
             <div class="centered row" id="login-heading">
-                Login
+                Let's Eat!
             </div>
             <div class="centered row" id="user-row">
                 <div class="ui two wide center aligned column">
@@ -60,8 +60,7 @@
         <div class="small ui modal">
             <div class="header">
                 <center>
-                    <span id="username"></span>
-                    <!-- <i class="big asterisk icon"></i> --><br>
+                    <span id="username"></span><br>
                     Please enter your password!
                 </center>
             </div>
