changed stars to imagesonly

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                             <img class="ui small centered image food-image" src="graphics/fats.png" id="fats-icon">
                                         </div>
                                         <div class="column">
-                                            <img style="height:4.5%; width: auto;" class="ui mini centered image" src="graphics/newOneStar.png">
+                                            <img style="height:4.5%; width: auto;" class="ui mini centered image" src="graphics/newestOneStar.png">
                                         </div>
                                     </div>
                                 </div>
@@ -73,7 +73,7 @@
                                             <img class="ui small centered image food-image" src="graphics/dair.png" id="dair-icon">
                                         </div>
                                         <div class="column">
-                                            <img style="height:4.5%; width: auto;" class="ui mini centered image" src="graphics/newFourStar.png">
+                                            <img style="height:4.5%; width: auto;" class="ui mini centered image" src="graphics/newestFourStar.png">
                                             <!--p class="ui header" id="dairCount">4</p-->
                                         </div>
                                     </div>
@@ -91,7 +91,7 @@
                                         </div>
                                         <div class="column">
                                             <!--p class="ui header" id="veggCount">5</p-->
-                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newFiveStar.png">
+                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newestFiveStar.png">
                                         </div>
                                     </div>
 
@@ -110,7 +110,7 @@
                                             <img class="ui small centered image food-image" src="graphics/carb.png" id="carb-icon">
                                         </div>
                                         <div class="column">
-                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newThreeStar.png">
+                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newestThreeStar.png">
                                         </div>
                                     </div>
 
@@ -125,7 +125,7 @@
                                             <img class="ui small centered image food-image" src="graphics/frui.png" id="frui-icon">
                                         </div>
                                         <div class="column">
-                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newFiveStar.png">                                       
+                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newestFiveStar.png">                                       
                                         </div>
 
                                     </div>
