new star images

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <body>
         <div class="ui three item pointing menu">
-            <a class="active item"><img src="graphics/frui.png"></a>
+            <a class="active item"><img src="graphics/plateFork.png"></a>
             <a class="item" href="pet.html"><img src="graphics/dogHead.png"></a>
             <a class="item">Other</a>
         </div>
@@ -55,7 +55,7 @@
                                             <img class="ui small centered image food-image" src="graphics/fats.png" id="fats-icon">
                                         </div>
                                         <div class="column">
-                                            <img style="height:4.5%; width: auto;" class="ui mini centered image" src="graphics/newestOneStar.png">
+                                            <img style="height:4.5%; width: auto;" class="ui mini centered image" src="graphics/newestOneStarImg.png">
                                         </div>
                                     </div>
                                 </div>
@@ -73,7 +73,7 @@
                                             <img class="ui small centered image food-image" src="graphics/dair.png" id="dair-icon">
                                         </div>
                                         <div class="column">
-                                            <img style="height:4.5%; width: auto;" class="ui mini centered image" src="graphics/newestFourStar.png">
+                                            <img style="height:4.5%; width: auto;" class="ui mini centered image" src="graphics/newestFourStarImg.png">
                                             <!--p class="ui header" id="dairCount">4</p-->
                                         </div>
                                     </div>
@@ -91,7 +91,7 @@
                                         </div>
                                         <div class="column">
                                             <!--p class="ui header" id="veggCount">5</p-->
-                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newestFiveStar.png">
+                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newestFiveStarImg.png">
                                         </div>
                                     </div>
 
@@ -110,7 +110,7 @@
                                             <img class="ui small centered image food-image" src="graphics/carb.png" id="carb-icon">
                                         </div>
                                         <div class="column">
-                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newestThreeStar.png">
+                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newestThreeStarImg.png">
                                         </div>
                                     </div>
 
@@ -125,7 +125,7 @@
                                             <img class="ui small centered image food-image" src="graphics/frui.png" id="frui-icon">
                                         </div>
                                         <div class="column">
-                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newestFiveStar.png">                                       
+                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newestFiveStarImg.png">                                       
                                         </div>
 
                                     </div>
@@ -142,7 +142,7 @@
                         <img class="ui fluid image" src="graphics/plateFork.png" alt="plate" id="plate-image">
                     <div class="row"><br></div>
                     <div class="center aligned row">
-                        <button class="ui primary right floated button" id = "saveButton">Save</button>
+                        <button class="ui primary right floated button" id = "saveButton">Eat!</button>
                     </div>
                 </div>
 
