--- a/pet.html
+++ b/pet.html
@@ -24,7 +24,7 @@
 <body>
 
 <div class="ui three item pointing menu">
-    <a class="item" href="index.html"><img src="graphics/frui.png"></a>
+    <a class="item" href="index.html"><img src="graphics/plateFork.png"></a>
     <a class="active item"><img src="graphics/dogHead.png"></a>
     <a class="item">Other</a>
 </div>
