make dog clickable to go to pet page

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                         </div>
                     </div>
 
-                    <img class="ui fluid image" src="graphics/dog.jpg" alt="dog">
+                    <a class="item" href="pet.html"><img class="ui fluid image" src="graphics/dog.jpg" alt="dog"></a>
+
                 </div>
     </body>
