fix updating temp stars

--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
             
                 <!--plate-->
                 <div class="six wide middle aligned column">
+                    <div id = "plate-image-div">
                         <img class="ui fluid image" src="graphics/plateFork.png" alt="plate" id="plate-image">
+                    </div>
                     <div class="row"><br></div>
                     <div class="center aligned row">
                         <button class="ui primary right floated button" id = "saveButton">Eat!</button>
