change star and add id

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                             <img class="ui small centered image food-image" src="graphics/prot.png" id="prot-icon">
                                         </div>
                                         <div class="column">
-                                            <img style="height:4.5%; width: auto;" class="ui mini centered image" src="graphics/newestOneStarImg.png">
+                                            <img style="height:4.5%; width: auto;" id="prot-star" class="ui mini centered image" src="graphics/newestThreeStarImg.png">
                                         </div>
                                     </div>
                                 </div>
@@ -73,7 +73,7 @@
                                             <img class="ui small centered image food-image" src="graphics/dair.png" id="dair-icon">
                                         </div>
                                         <div class="column">
-                                            <img style="height:4.5%; width: auto;" class="ui mini centered image" src="graphics/newestFourStarImg.png">
+                                            <img style="height:4.5%; width: auto;" id="dair-star" class="ui mini centered image" src="graphics/newestTwoStarImg.png">
                                             <!--p class="ui header" id="dairCount">4</p-->
                                         </div>
                                     </div>
@@ -91,7 +91,7 @@
                                         </div>
                                         <div class="column">
                                             <!--p class="ui header" id="veggCount">5</p-->
-                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newestFiveStarImg.png">
+                                            <img style="height:5%; width: auto;" id="vegg-star" class="ui mini centered image" src="graphics/newestFiveStarImg.png">
                                         </div>
                                     </div>
 
@@ -110,7 +110,7 @@
                                             <img class="ui small centered image food-image" src="graphics/carb.png" id="carb-icon">
                                         </div>
                                         <div class="column">
-                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newestThreeStarImg.png">
+                                            <img style="height:5%; width: auto;" id="carb-star" class="ui mini centered image" src="graphics/newestTwoStarImg.png">
                                         </div>
                                     </div>
 
@@ -125,7 +125,7 @@
                                             <img class="ui small centered image food-image" src="graphics/frui.png" id="frui-icon">
                                         </div>
                                         <div class="column">
-                                            <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newestFiveStarImg.png">                                       
+                                            <img style="height:5%; width: auto;" id="frui-star" class="ui mini centered image" src="graphics/newestFiveStarImg.png">                                       
                                         </div>
 
                                     </div>
