--- a/pet.html
+++ b/pet.html
@@ -54,7 +54,7 @@
 		</div>
 
 		<div class="three wide column">
-			<div class="ui centered card">
+			<div class="ui centered card" id="starBox">
 				<div class="content">
 					<img class="left floated tiny ui image" src="graphics/star.jpeg">
 					<div class="right floated header">
