added hover feedback of food images

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 
                                     <div class= "ui fluid image" id ="prot-icon-div">
                                         <div class="column">
-                                            <img class="ui small centered image food-image" src="graphics/prot.png" id="prot-icon">
+                                            <input type="image" class="ui small centered image food-image" src="graphics/prot.png" id="prot-icon">
                                         </div>
                                         <div class="column">
                                             <img style="height:4.5%; width: auto;" id="prot-star" class="ui mini centered image" src="graphics/newestThreeStarImg.png">
@@ -70,7 +70,7 @@
 
                                     <div class="ui fluid image" id = "dair-icon-div">
                                         <div class="column">
-                                            <img class="ui small centered image food-image" src="graphics/dair.png" id="dair-icon">
+                                            <input type="image" class="ui small centered image food-image" src="graphics/dair.png" id="dair-icon">
                                         </div>
                                         <div class="column">
                                             <img style="height:4.5%; width: auto;" id="dair-star" class="ui mini centered image" src="graphics/newestTwoStarImg.png">
@@ -87,7 +87,7 @@
                                     <div class="ui fluid image" id = "vegg-icon-div">
 
                                         <div class = "column">
-                                            <img class="ui small centered image food-image" src="graphics/vegg.png" id="vegg-icon">
+                                            <input type="image" class="ui small centered image food-image" src="graphics/vegg.png" id="vegg-icon">
                                         </div>
                                         <div class="column">
                                             <!--p class="ui header" id="veggCount">5</p-->
@@ -107,7 +107,7 @@
                                     <div class="ui fluid image" id = "carb-icon-div">
 
                                         <div class="column">
-                                            <img class="ui small centered image food-image" src="graphics/carb.png" id="carb-icon">
+                                            <input type='image' class="ui small centered image food-image" src="graphics/carb.png" id="carb-icon">
                                         </div>
                                         <div class="column">
                                             <img style="height:5%; width: auto;" id="carb-star" class="ui mini centered image" src="graphics/newestTwoStarImg.png">
@@ -122,7 +122,7 @@
                                     <div class="ui fluid image" id = "frui-icon-div">
 
                                         <div class="column">
-                                            <img class="ui small centered image food-image" src="graphics/frui.png" id="frui-icon">
+                                            <input type="image" class="ui small centered image food-image" src="graphics/frui.png" id="frui-icon">
                                         </div>
                                         <div class="column">
                                             <img style="height:5%; width: auto;" id="frui-star" class="ui mini centered image" src="graphics/newestFiveStarImg.png">                                       
