--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                         </div>
                                         <div class="column">
                                             <div id="prot-star">
-                                                <img style="height:4.5%; width: auto;" class="ui mini centered image" src="graphics/newestThreeStarImg.png">
+                                                <img style="height:4.5%; width: auto;" class="ui mini centered image" src="graphics/3star.png">
                                             </div>
                                         </div>
                                     </div>
@@ -75,7 +75,7 @@
                                         </div>
                                         <div class="column">
                                             <div id="dair-star">
-                                                <img style="height:4.5%; width: auto;" class="ui mini centered image" src="graphics/newestTwoStarImg.png">
+                                                <img style="height:4.5%; width: auto;" class="ui mini centered image" src="graphics/2star.png">
                                             </div>
                                             <!--p class="ui header" id="dairCount">4</p-->
                                         </div>
@@ -95,7 +95,7 @@
                                         <div class="column">
                                             <!--p class="ui header" id="veggCount">5</p-->
                                             <div id="vegg-star">
-                                                <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newestFiveStarImg.png">
+                                                <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/5star.png">
                                             </div>
                                         </div>
                                     </div>
@@ -116,7 +116,7 @@
                                         </div>
                                         <div class="column">
                                             <div id="carb-star">
-                                                <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newestTwoStarImg.png">
+                                                <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/2star.png">
                                             </div>
                                         </div>
                                     </div>
@@ -133,7 +133,7 @@
                                         </div>
                                         <div class="column">
                                             <div id="frui-star">
-                                                <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/newestFiveStarImg.png"> 
+                                                <img style="height:5%; width: auto;" class="ui mini centered image" src="graphics/5star.png"> 
                                             </div>                                      
                                         </div>
 
