fixed formatting of nav bar

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </head>
 
     <body>
-        <div class="ui three item pointing menu">
+        <div class="ui two item pointing menu">
             <a class="active item"><img src="graphics/plateFork.png"></a>
             <a class="item" href="pet.html"><img src="graphics/dogHead.png"></a>
         </div>
