--- a/pet.html
+++ b/pet.html
@@ -23,7 +23,7 @@
 
 <body>
 
-<div class="ui three item pointing menu">
+<div class="ui two item pointing menu">
     <a class="item" href="index.html"><img src="graphics/plateFork.png"></a>
     <a class="active item"><img src="graphics/dogHead.png"></a>
 </div>
