--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <body>
         <div class="ui two item pointing menu">
             <a class="active item"><img src="graphics/plateFork.png"></a>
-            <a class="item" href="pet.html"><img src="graphics/dogHead.png"></a>
+            <a class="item" href="pet.html"><img src="graphics/navBarDog.png"></a>
         </div>
 
         <center><div id='welcome-message'></div></center>
