--- a/pet.html
+++ b/pet.html
@@ -25,7 +25,7 @@
 
 <div class="ui two item pointing menu">
     <a class="item" href="index.html"><img src="graphics/plateFork.png"></a>
-    <a class="active item"><img src="graphics/dogHead.png"></a>
+    <a class="active item"><img src="graphics/navBarDog.png"></a>
 </div>
 
 <div class="container">
