test items on pet before purchasing

--- a/pet.html
+++ b/pet.html
@@ -93,6 +93,10 @@
 					</div>
 				</div>
 			<div class="centered row" id="starsMsg"></div>
+			<div class="centered row" id="buyButton">
+				<div class="column" id="removeColumn"></div>
+				<div class="column" id="buyColumn"></div>
+			</div>
 			</div>
 		</div>
 	<!-- 	<div class="one wide column">
